tests/Tuc/Fixtures/errors/CalledUndefinedHandler.tuc
tuc parse error test
participants
    [InputStream] parts
    StreamListener parts

[InputStream]
    StreamListener.UndefinedHandler
